Fix broken style of ProfileRoute actions

--- a/src/app/user/routes/ProfileRoute/ProfileRoute.module.scss
+++ b/src/app/user/routes/ProfileRoute/ProfileRoute.module.scss
@@ -19,6 +19,7 @@
 
 .actions {
   display: flex;
+  align-items: center;
   gap: 0.75rem;
 }
 
